@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-12T00:29:06Z",
-  "count" : 364,
-  "count_minmax" : [ 138, 364 ],
-  "count_decinc" : [ -0, +364 ],
+  "timestamp" : "2022-08-12T08:07:04Z",
+  "count" : 366,
+  "count_minmax" : [ 138, 366 ],
+  "count_decinc" : [ -0, +366 ],
   "uniques" : 11,
   "uniques_minmax" : [ 11, 11 ],
   "uniques_decinc" : [ -0, +11 ]
