@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-12T00:29:06Z",
+  "timestamp" : "2022-08-12T08:07:04Z",
   "count_outdated" : 49097,
   "uniques_outdated" : 750,
-  "count" : 52647,
-  "uniques" : 836,
+  "count" : 52623,
+  "uniques" : 837,
   "clones" : [
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 322,
+      "count": 179,
       "count_minmax": [ 117, 345 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-08-11T00:00:00Z",
-      "count": 364,
-      "count_minmax": [ 138, 364 ],
+      "count": 366,
+      "count_minmax": [ 138, 366 ],
       "uniques": 11,
       "uniques_minmax": [ 11, 11 ]
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
+      "count": 117,
+      "count_minmax": [ 117, 117 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
