@@ -1,3 +1,10 @@
+2022-08-12T08:07:04Z:
+* notice: last 14d: unq all: 45 3526
+* notice: prev accum: outdated-unq outdated-all / unq all: 750 49097 / 836 52647
+* notice: next accum: outdated-unq outdated-all / unq all: 750 49097 / 837 52623
+* notice: prev exec diff / last date diff / accum: unq all: +1 +119 -0 -143 / +1 +117 -0 -0 / 1 117
+* notice: removed / changed dates: [] / [2022-07-29 2022-08-11 2022-08-12]
+
 2022-08-12T00:29:06Z:
 * notice: last 14d: unq all: 45 3550
 * notice: prev accum: outdated-unq outdated-all / unq all: 748 48754 / 836 52258
